--- a/index.css
+++ b/index.css
@@ -1,3 +1,33 @@
+*{
+    padding: 0;
+    margin:0;
+    text-decoration: none;
+    list-style:none;
+    box-sizing: border-box;
+}
+.logo{
+    
+     
+    background: url(logo.png), rgb(0, 0, 0) 50% / cover no-repeat; 
+}
+nav{
+    background: #041715;
+    height: 85px;
+    width: 100%;
+    flex-shrink: 0; 
+}
+
+
+a{ 
+    color: rgba(50, 159, 11, 0.78);
+    text-align: center;
+    font-family: 'Aclonica', sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;  
+}
+
 .flexbox-capa{
     display: flex;
     flex-direction: column;
@@ -5,4 +35,3 @@
     max-width: 100%;
     justify-content: space-between;
 }
-
