--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 *{
     padding: 0;
     margin:0;
@@ -5,27 +7,96 @@
     list-style:none;
     box-sizing: border-box;
 }
-.logo{
-    
-     
-    background: url(logo.png), rgb(0, 0, 0) 50% / cover no-repeat; 
+:root{
+    --color-primary: #091C26;
+    --color-on-text-primary: #FFFFFF;
+    --color-header: #041715;
 }
-nav{
-    background: #041715;
-    height: 85px;
+
+header{
     width: 100%;
-    flex-shrink: 0; 
+    height: 85px;
+    flex-shrink: 0;
+    background: #041715;  
 }
 
+.navbar{
+    width: 100%;
+    background-color: #041715;
+    padding-left: 30px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    
+}
+.logo{
+    display: inline-block;
+}
 
-a{ 
+.nav-links{
+    list-style: none;
+    display: flex;
+}
+
+.nav-item{
     color: rgba(50, 159, 11, 0.78);
-    text-align: center;
     font-family: 'Aclonica', sans-serif;
+    text-align: center;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;  
+    line-height: normal;
+    padding: 7px 5px;
+    border-radius: 3px;
+    text-transform: uppercase;
+
+}
+
+.nav-item:hover{
+    background-color: #3c7c4f;
+    transition: .5s;
+}
+
+.nav-item:hover a {
+    color: #10490b;
+}
+
+.logo img{
+    width: 175px;
+    vertical-align: middle;
+    
+}
+
+
+/* Telas menores*/
+@media (max-width: 768px) {
+.navbar{
+    width: 100%;
+    background-color: #041715;
+    padding-left: 30px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+  
+.nav-links.active {
+    display: flex;
+}
+  
+.nav-links li {
+    margin: 10px 0;
+}
+  
+.menu-icon {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
 }
 
 .flexbox-capa{
@@ -34,4 +105,19 @@ a{
     margin: 0%;
     max-width: 100%;
     justify-content: space-between;
+}
+
+footer{
+    background-color: var(--color-header);
+    color: var(--color-on-text-primary);
+    font-family:'Inter', sans-serif;
+    display: flex;
+    padding: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-col{
+    text-align: center;
+    width: 40%;
 }
