--- a/index.css
+++ b/index.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
-*{
-    padding: 0;
-    margin:0;
-    text-decoration: none;
-    list-style:none;
+html {
     box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
 :root{
     --color-primary: #091C26;
@@ -13,27 +15,33 @@
     --color-header: #041715;
 }
 
+
 header{
     width: 100%;
     height: 85px;
-    flex-shrink: 0;
-    background: #041715;  
+    /*flex-shrink: 1;*/
+    background: #041715;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px; 
+     
 }
-
+.logo{
+    width: 175px;
+    vertical-align: middle;
+    
+}
 .navbar{
-    width: 100%;
     background-color: #041715;
     padding-left: 30px;
     padding-right: 10px;
     display: flex;
-    justify-content: space-between;
+    
     align-items: center;
     
-    
 }
-.logo{
-    display: inline-block;
-}
+
 
 .nav-links{
     list-style: none;
@@ -68,35 +76,82 @@ header{
     vertical-align: middle;
     
 }
-
+.flex-botao{
+    display: none;
+}
 
 /* Telas menores*/
-@media (max-width: 768px) {
-.navbar{
-    width: 100%;
-    background-color: #041715;
-    padding-left: 30px;
-    padding-right: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+@media only screen and (max-width: 768px){
+    .flex-botao{
+        display: flex;
+        justify-content: right; 
+        align-items: center;
+        height: 80px; 
+        margin-right: 25px;
+    }
+
+    .botao{
+        padding: 10px 20px; 
+        background-color: #086d08;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+    }
+
+    .button:hover {
+        background-color: #2980b9;
+    }
+    .navbar{
+        width: 100%;
+        background-color: #041715;
+        padding-left: 30px;
+        padding-right: 10px;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
     
-}
-  
-.nav-links.active {
-    display: flex;
-}
-  
-.nav-links li {
-    margin: 10px 0;
-}
-  
-.menu-icon {
-    display: block;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-}
+    .logo{
+        display: inline-block;
+    }
+
+    .nav-links{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+    }
+    
+    .nav-item{
+        display: flex;
+        flex-direction: column;
+        color: rgba(50, 159, 11, 0.78);
+        font-family: 'Aclonica', sans-serif;
+        text-align: center;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 7px 5px;
+        border-radius: 3px;
+        text-transform: uppercase;
+    }
+    .nav-item:hover{
+        background-color: #3c7c4f;
+        transition: .5s;
+    }
+
+    .nav-item:hover a {
+        color: #10490b;
+    }
+
+    .logo img{
+        width: 175px;
+        vertical-align: middle;
+        
+    }
+    
 }
 
 .flexbox-capa{
