--- a/index.css
+++ b/index.css
@@ -83,11 +83,9 @@ header{
 /* Telas menores*/
 @media only screen and (max-width: 768px){
     .flex-botao{
-        display: flex;
-        justify-content: right; 
-        align-items: center;
-        height: 80px; 
-        margin-right: 25px;
+        display: block;
+        text-align: center;
+        
     }
 
     .botao{
@@ -98,11 +96,22 @@ header{
         border-radius: 5px;
         cursor: pointer;
         font-size: 16px;
+        display: block;
+        margin: 10px 0;
+    }
+    .botaoFechado{
+        background-color: #ff0000;
     }
 
-    .button:hover {
-        background-color: #2980b9;
+    .botao.clicked{
+        background-color: #041715;
+        color: #fff;
     }
+
+    .logo{
+        display: inline-block;
+    }
+
     .navbar{
         width: 100%;
         background-color: #041715;
@@ -112,9 +121,17 @@ header{
         flex-direction: column;
         align-items: center;
     }
-    
-    .logo{
-        display: inline-block;
+    #botaoFechado{
+        display: none;
+    }
+    .navbar.visivel{
+        display: flex;
+    }
+    .navbar.visivel #botaoFechado{
+        display: block;
+    }
+    .logo.sem-logo {
+        display: none;
     }
 
     .nav-links{
