--- a/index.css
+++ b/index.css
@@ -83,8 +83,15 @@ header{
 /* Telas menores*/
 @media only screen and (max-width: 768px){
     .flex-botao{
-        display: block;
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #041715;
+        width: 100%;
+        z-index: 1;
         
     }
 
@@ -98,20 +105,24 @@ header{
         font-size: 16px;
         display: block;
         margin: 10px 0;
+        position: absolute;
+        right: 10px;
+        top: 10px;
     }
-    .botaoFechado{
-        background-color: #ff0000;
-    }
-
-    .botao.clicked{
-        background-color: #041715;
+    
+    .botao-navbar.clicked{
+        background-color: #4f47c5;
         color: #fff;
     }
 
     .logo{
         display: inline-block;
+        transition: opacity 0.3s;
     }
-
+    .logo.sem-logo{
+        display: none;
+    }
+    /*
     .navbar{
         width: 100%;
         background-color: #041715;
@@ -120,19 +131,36 @@ header{
         display: none;
         flex-direction: column;
         align-items: center;
+        margin-top: 10px;
     }
-    #botaoFechado{
+    */
+    .navbar {
+        background-color: #041715;
         display: none;
+        flex-direction: column;
+        align-items: center;
+        overflow-y: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; 
     }
+    
+    
+    /*
+    #botao-navbar {
+        position: fixed;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1;
+    }
+    */  
     .navbar.visivel{
         display: flex;
     }
-    .navbar.visivel #botaoFechado{
-        display: block;
-    }
-    .logo.sem-logo {
-        display: none;
-    }
+    
 
     .nav-links{
         display: flex;
@@ -167,6 +195,9 @@ header{
         width: 175px;
         vertical-align: middle;
         
+    }
+    .corpo-pagina.oculto {
+        display: none;
     }
     
 }
