--- a/index.css
+++ b/index.css
@@ -1,21 +1,213 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-*{
-    padding: 0;
-    margin:0;
-    text-decoration: none;
-    list-style:none;
+html {
     box-sizing: border-box;
 }
 
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
 :root{
     --color-primary: #091C26;
     --color-on-text-primary: #FFFFFF;
     --color-header: #041715;
 }
 
-body{
-    background-color: var(--color-primary);
+header{
+    width: 100%;
+    height: 85px;
+    /*flex-shrink: 1;*/
+    background: #041715;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px; 
+     
+}
+.logo{
+    width: 175px;
+    vertical-align: middle;
+    
+}
+.navbar{
+    background-color: #041715;
+    padding-left: 30px;
+    padding-right: 10px;
+    display: flex;
+    
+    align-items: center;
+    
+}
+
+
+.nav-links{
+    list-style: none;
+    display: flex;
+}
+
+.nav-item{
+    color: rgba(50, 159, 11, 0.78);
+    font-family: 'Aclonica', sans-serif;
+    text-align: center;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 7px 5px;
+    border-radius: 3px;
+    text-transform: uppercase;
+
+}
+
+.nav-item:hover{
+    background-color: #3c7c4f;
+    transition: .5s;
+}
+
+.nav-item:hover a {
+    color: #10490b;
+}
+
+.logo img{
+    width: 175px;
+    vertical-align: middle;
+    
+}
+.flex-botao{
+    display: none;
+}
+
+/* Telas menores*/
+@media only screen and (max-width: 768px){
+    .flex-botao{
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: #041715;
+        width: 100%;
+        z-index: 1;
+        
+    }
+
+    .botao{
+        padding: 10px 20px; 
+        background-color: #086d08;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        display: block;
+        margin: 10px 0;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+    
+    .botao-navbar.clicked{
+        background-color: #4f47c5;
+        color: #fff;
+    }
+
+    .logo{
+        display: inline-block;
+        transition: opacity 0.3s;
+    }
+    .logo.sem-logo{
+        display: none;
+    }
+    /*
+    .navbar{
+        width: 100%;
+        background-color: #041715;
+        padding-left: 30px;
+        padding-right: 10px;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+    }
+    */
+    .navbar {
+        background-color: #041715;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        overflow-y: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; 
+    }
+    
+    
+    /*
+    #botao-navbar {
+        position: fixed;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1;
+    }
+    */  
+    .navbar.visivel{
+        display: flex;
+    }
+    
+
+    .nav-links{
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+    }
+    
+    .nav-item{
+        display: flex;
+        flex-direction: column;
+        color: rgba(50, 159, 11, 0.78);
+        font-family: 'Aclonica', sans-serif;
+        text-align: center;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 7px 5px;
+        border-radius: 3px;
+        text-transform: uppercase;
+    }
+    .nav-item:hover{
+        background-color: #3c7c4f;
+        transition: .5s;
+    }
+
+    .nav-item:hover a {
+        color: #10490b;
+    }
+
+    .logo img{
+        width: 175px;
+        vertical-align: middle;
+        
+    }
+    .corpo-pagina.oculto {
+        display: none;
+    }
+    
+}
+
+.flexbox-capa{
+    display: flex;
+    flex-direction: column;
+    margin: 0%;
+    max-width: 100%;
+    justify-content: space-between;
 }
 
 footer{
@@ -32,52 +224,14 @@ footer{
     text-align: center;
     width: 40%;
 }
-header{
-    width: 100%;
-    height: 85px;
-    flex-shrink: 0;
-    background: #041715;  
+
+/*BODY*/
+
+body{
+    background-color: var(--color-primary);
 }
 
-nav{
-    background: #041715;
-    height: 85px;
-    width: 100%;
-    flex-shrink: 0; 
-}
-.logo{
-    width: 172px;
-    height: 56px;
-    flex-shrink: 0; 
-    margin: 10px;
-    background: url(logo.png), rgb(0, 0, 0) 50% / cover no-repeat; 
-}
-
-nav ul{
-    float: right;
-    margin-right: 20px;
-}
-
-nav ul li{
-    display: inline-block;
-}
-a{ 
-    color: rgba(50, 159, 11, 0.78);
-    text-align: center;
-    font-family: 'Aclonica', sans-serif;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;  
-}
-
-.flexbox-capa{
-    display: flex;
-    flex-direction: column;
-    margin: 0%;
-    max-width: 100%;
-    justify-content: space-between;
-}
+/*PALESTRANTES*/
 
 .palestrantes-title{
     text-align: center;
@@ -117,6 +271,7 @@ a{
     justify-content: center;
     margin-bottom: 10px;
     display: flex;
+    list-style-type: none;
 }
 
 .palestrante_foto{
