--- a/ingressos.css
+++ b/ingressos.css
@@ -44,7 +44,7 @@
 }
 
 .nav-item{
-    color: rgba(50, 159, 11, 0.78);
+    color: var(--color-on-text-primary);
     font-family: 'Aclonica', sans-serif;
     text-align: center;
     font-size: 12px;
@@ -159,8 +159,8 @@ footer{
     flex-direction: column;
     align-items: center;
     text-align:center;
-    font-size:50px;
-    justify-content: space-evenly;
+    font-size:35px;
+    justify-content: center;
     
 }
 
@@ -169,11 +169,30 @@ footer{
     background-color: black;
     color:#FFFFFF;
     font-size:20px;
-
+    border-radius: 5px;
+    padding: 20px 20px; /* Espaçamento interno do botão */
+    border: none;
+    margin-top: 80px;
+    cursor: pointer;
 }
 
+
+.botao:hover{
+    background-color: #3c7c4f;
+    transition: .5s;
+    
+}
+
+.botao:hover a {
+    color: #10490b;
+}
+
+.chamada-sc{
+    margin-top: 180px;
+
+}
 .ingresso-pic{
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
     
 }
