--- a/ingressos_b.css
+++ b/ingressos_b.css
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-html {
-    box-sizing: border-box;
-}
-
 
 *{
     padding: 0;
@@ -21,53 +17,7 @@ html {
 }
 
 
-header{
-    
-    /*flex-shrink: 0;*/
-    background: #041715;
-    
-    
-}
 
-/* Flexbox para o container principal */
-.container{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    
-}
-
-
-.corpo-pagina{
-    display: flex;
-    flex-direction: row;
-    background-color: var(--color-primary);
-
-}
-
-
-/* Área 1 */
-.area1 {
-    color: var(--color-on-text-primary);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Área 2 */
-.area2 {
-    color: #FFFFFF;
-    font-family: 'Aclonica', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-size: 35px;
-    justify-content: center;
-}
 
 .navbar{
     width: 100%;
@@ -122,27 +72,6 @@ header{
     
 }
 
-.botao{
-    background-color: black;
-    color:#FFFFFF;
-    font-size:20px;
-    border-radius: 5px;
-    padding: 20px 20px; /* Espaçamento interno do botão */
-    border: none;
-    margin-top: 80px;
-    cursor: pointer;
-}
-
-
-.botao:hover{
-    background-color: #3c7c4f;
-    transition: .5s;
-    
-}
-
-.botao:hover a {
-    color: #10490b;
-}
 
 .flex-botao{
     display: none;
@@ -166,12 +95,6 @@ header{
         
     }
 
-    .corpo-pagina{
-        display: flex;
-        flex-direction: column;
-    }
-
-
     .botao{
         padding: 10px 20px; 
         background-color: #086d08;
@@ -186,7 +109,6 @@ header{
         right: 10px;
         top: 10px;
     }
-    
     /*
     .botao-navbar.clicked{
         background-color: #4f47c5;
@@ -279,9 +201,6 @@ header{
         display: none;
     }
     
-    .botao.oculto{
-        display: none;
-    }
     /* teste */
 
     
@@ -317,7 +236,7 @@ footer{
     color: var(--color-on-text-primary);
     font-family:'Inter', sans-serif;
     display: flex;
-    padding: 25px;
+    padding: 50px;
     align-items: center;
     justify-content: space-between;
 }
@@ -327,7 +246,44 @@ footer{
     width: 40%;
 }
 
+.container{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 8fr 1fr;
+    
+}
 
+.main-grid{
+    display: grid;
+    background-color: var(--color-primary);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-template-areas: 
+    "area1 area2";
+}
+
+.area1{
+    grid-area: area1;
+    color: var(--color-on-text-primary);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    
+}
+
+.area2{
+    grid-area: area2;
+    color: #FFFFFF;
+    font-family: 'Aclonica', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align:center;
+    font-size:35px;
+    justify-content: center;
+    
+}
 
 
 .botao{
