--- a/sessoes.css
+++ b/sessoes.css
@@ -1,32 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
 html {
     box-sizing: border-box;
 }
-
+/*
 *, *::before, *::after {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
     text-decoration: none;
+    /*display: flex;
+    flex-direction: column;
+    min-height: 100vh;*/
+
+* {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    
+}
+
 :root{
     --color-primary: #091C26;
     --color-on-text-primary: #FFFFFF;
     --color-header: #041715;
 }
 
+
 header{
     width: 100%;
     height: 85px;
-    /*flex-shrink: 1;*/
+    /*flex-shrink: 0;*/
     background: #041715;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px; 
-     
+    padding: 0 10px;
+    
 }
+.corpo-pagina {
+    flex-grow: 1;
+    padding: 0 10px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+    background-color: #091C26;
+}
+.imagem-texto{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: center;
+}
+.paragrafo-1, .paragrafo-2{
+    margin: auto;
+    text-align: justify;
+    color: #ffffff;
+    margin-left: 20px;
+}
+.capa-home{
+    max-width: 50%;
+    margin-left: 20px;
+}
+.Titulo, h3{
+    margin-top: 10px;
+    font-family: 'Aclonica', sans-serif;
+    color: #1ca032;
+    flex-grow: 1; 
+    margin-left: 20px;
+}
+
+footer{
+    padding: 25px; /* Adicione o espaçamento desejado ao rodapé. */
+    background-color: #041715;
+    color: #FFFFFF;
+    text-align: center;
+}
+/*
+main{
+    padding: 0 10px;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+footer{
+    padding: 20px;
+    flex-shrink: 0;
+}
+*/
 .logo{
     width: 175px;
     vertical-align: middle;
@@ -49,7 +117,7 @@ header{
 }
 
 .nav-item{
-    color: rgba(50, 159, 11, 0.78);
+    color: rgba(255, 255, 255, 0.78);
     font-family: 'Aclonica', sans-serif;
     text-align: center;
     font-size: 12px;
@@ -82,6 +150,21 @@ header{
 
 /* Telas menores*/
 @media only screen and (max-width: 768px){
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .imagem-texto{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .paragrafo-1{
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+
     .flex-botao{
         display: flex;
         flex-direction: column;
@@ -109,12 +192,12 @@ header{
         right: 10px;
         top: 10px;
     }
-    
+    /*
     .botao-navbar.clicked{
         background-color: #4f47c5;
         color: #fff;
     }
-
+    */
     .logo{
         display: inline-block;
         transition: opacity 0.3s;
@@ -171,7 +254,7 @@ header{
     .nav-item{
         display: flex;
         flex-direction: column;
-        color: rgba(50, 159, 11, 0.78);
+        color: rgba(255, 255, 255, 0.78);
         font-family: 'Aclonica', sans-serif;
         text-align: center;
         font-size: 12px;
@@ -215,7 +298,7 @@ footer{
     color: var(--color-on-text-primary);
     font-family:'Inter', sans-serif;
     display: flex;
-    padding: 50px;
+    padding: 25px;
     align-items: center;
     justify-content: space-between;
 }
@@ -225,15 +308,13 @@ footer{
     width: 40%;
 }
 
-/*BODY*/
+/*sessoes*/
 
 body{
     background-color: var(--color-primary);
 }
 
-/*PALESTRANTES*/
-
-.palestrantes-title{
+.sessoes-title{
     text-align: center;
     margin: 40px;
     color:var(--color-on-text-primary);
@@ -241,191 +322,46 @@ body{
     font-size: 20px;
 }
 
-.container-cards{
-    display: flex;
-    justify-content: center;
-}
-
-.cards{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 20px;
-    grid-column-gap: auto;
-    column-gap: 100px;
-
-    @media (max-width: 950px) {
-        grid-template-columns: 1fr; /* Uma coluna em telas menores */
-    }
-}
-
-.palestrante{
-    width: 400px;
-    background-color: var(--color-header);
-    color:var(--color-on-text-primary);
-    font-family: "Inter", sans-serif;
-    border-radius: 4%;
-}
-
-.palestrante_redes{
+.cards-sessoes{
+    display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
-    display: flex;
-    list-style-type: none;
-}
-
-.palestrante_foto{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-}
-
-.palestrante_nome{
-    font-size: 20px;
-    margin: 8px;
-    text-align: center;
-}
-
-.palestrante_biografia{
-    margin-right: 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.palestrante_palestra{
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.palestrante_empresas{
-    text-align: center;
-}
-
-.palestrante_redes-instagram{
-    width: 40px;
-    margin-right: 20px;
-    height: 40px;
-}
-
-.palestrante_redes-linkedin{
-    width: 40px;
-    height: 40px;
-}
-
-.cards:last-child{
-    margin-bottom: 20px;
-}
-
-/*contato*/
-
-.contato-title{
-    text-align: center;
-    margin: 40px;
-    color:var(--color-on-text-primary);
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-}
-
-.card-contato{
-    width: 500px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--color-header);
-    border-radius: 4% ;
-}
-
-.container-card{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
-    font-family:'Inter', sans-serif;
+    font-family: 'inter', sans-serif;
     color: var(--color-on-text-primary);
 }
 
-.contato-form{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+.card{
+    background-color: var(--color-header);
+    width: 500px;
+    border-radius: 4%;
+    margin-bottom: 40px;
 }
 
-.contato-form_title{
+.card-palestra{
     text-align: center;
-    font-size: x-large;
     margin-top: 20px;
     margin-bottom: 10px;
+    font-size: x-large;
 }
 
-.form-label{
+.card-ministrante{
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: large;
+}
+
+.card-descricao{
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 10px;
 }
 
-.form-input{
-    padding: 10px;
-    outline: none;
-    border: 0;
-    margin-bottom: 10px;
-    font-size: 15px;
-    border-radius: 4%;
+.card-slide{
+    text-align: center;
 }
 
-.form-input:hover{
-    border: 4px solid #3c7c4f;
-}
-
-.form-textarea{
-    font-family: 'inter', sans-serif;
-    padding: 10px;
-    outline: none;
-    border: 0;
-    margin-bottom: 10px;
-    font-size: 15px;
-    border-radius: 4%;
-}
-
-.form-textarea:hover{
-    border: 4px solid #3c7c4f;
-}
-
-.form-button{
-    margin-top: 10px;
-    background-color: black;
-    color:#FFFFFF;
-    font-size:20px;
-    border-radius: 5px;
-    padding: 20px 20px; /* Espaçamento interno do botão */
-    border: none;
-    cursor: pointer;
-}
-
-.form-button:hover{
-    background-color: #3c7c4f;
-    transition: .5s;
-}
-
-.redes-link_instagram{
-    width: 40px;
-    height: 40px;
-    margin-right: 40px;
-}
-
-.redes-link_facebook{
-    width: 40px;
-    height: 40px;
-}
-
-.redes-links{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
+.card-slide_texto{
+    margin-bottom: 20px;
 }
